no anda maquina de laburo subo para maquina personal
