# internal/adapters/http_server/handlers/moneda_handler.go
@@ -64,15 +64,15 @@ func (mh MonedaHandler) AltaMoneda(c *gin.Context) {
 }
 
 // @Summary	Retorna las cotizaciones paginadas segun los filtros
-// @Tags		Moneda
+// @Tags		Cotizacion
 // @Accept		json
 // @Produce	json
-// @Param		monedas			query		string	false	"id de las monedas que queremos separados por espacios"
+// @Param		monedas			query		string	false	"simbolos de las monedas que queremos separados por espacios"
 // @Param		fecha_inicial	query		string	false	"Fecha desde la cual quiero obtener cotizaciones (YYYY-MM-DD HH:MM:SS)"	Format(date-time)
 // @Param		fecha_final		query		string	false	"Fecha hasta la cual quiero obtener cotizaciones (YYYY-MM-DD HH:MM:SS)"	Format(date-time)
 // @Param		tam_paginas		query		string	false	"El tamaño de las paginas, como maximo es 100, el default es 50"
 // @Param		pagina_inicial	query		int		false	"Pagina a partir de la cual sera retornado el query"
-// @Param		cant_paginas	query		int		false	"La cantidad de paginas, como maximo es 10, el default es 1"
+// @Param		cant_paginas	query		int		false	"La cantidad de paginas, como maximo es 10, el default es 10"
 // @Param		orden			query		string	false	"Ordenar segun alguno de estos valores: fecha(default), valor, nombre"	Enum(fecha, valor, nombre)
 // @Param		orden_direccion	query		string	false	"Indica si es ascendente o descendente, el default es desdencente"		Enum(ascendente, descendente)
 // @Param		usuario			query		int		false	"Usuario elegido"
@@ -86,7 +86,7 @@ func (mh MonedaHandler) Cotizaciones(c *gin.Context) {
 	// filtros := c.Request.URL.Query()
 
 	parametrosBusqueda, err := validarParametros(c)
-	resumen := c.Query("resumen") == "si"
+	quiereResumen := c.Query("resumen") == "si"
 
 	if err != nil {
 		c.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
@@ -102,17 +102,20 @@ func (mh MonedaHandler) Cotizaciones(c *gin.Context) {
 	paginas := crearPaginas(parametrosBusqueda.TamPaginas, cotizacionesToAny(cotizaciones))
 	body := gin.H{"cotizaciones": paginas}
 
-	if resumen {
-		// TODO cambiar a resumen posta
-		body["resumen"] = mh.crearResumen(parametrosBusqueda)
-		body["cantidad_registros_posibles"] = cantidad
+	if quiereResumen {
+		body["resumen"], err = mh.crearResumen(parametrosBusqueda)
+		if err != nil {
+			c.JSON(http.StatusConflict, gin.H{"error": "no se pudo crear el resumen"})
+		}
+		body["cantidad_total_de_registros"] = cantidad
+		body["cantidad_de_paginas_posibles"] = cantidad / parametrosBusqueda.TamPaginas
 	}
 
 	c.JSON(http.StatusOK, body)
 }
 
 // @Summary	Llama para que se haga la cotizacion de las monedas
-// @Tags		Moneda
+// @Tags		Cotizacion
 // @Accept		json
 // @Produce	json
 // @Param		Authorization	header		string	true	"Token de autorización"
@@ -147,28 +150,107 @@ func ApiValida(nombre string) bool {
 	return nombre == "Paprika" || nombre == "CoinBase"
 }
 
-// @Summary	Listar las monedas preferidas de un usuario
-// @Tags		Moneda
+// @Summary	Usuario hace cotizacion de moneda manualmente
+// @Tags		Cotizacion
 // @Accept		json
 // @Produce	json
-// @Param		id	path		int	true	"id del usuario"
-// @Success	200	{object}	[]ports.MonedaOutputDTO
-// @Failure	400	{object}	string
-// @Router		/usuarios/{id}/monedas [get]
-func (mh MonedaHandler) MonedasDeUsuario(c *gin.Context) {
-
-	var id int
-	var err error
-	if id, err = strconv.Atoi(c.Param("id")); err != nil {
-		c.JSON(http.StatusBadRequest, gin.H{"error": fmt.Errorf("el id debe ser un entero")})
-		return
-	}
-
-	monedas, err := mh.srv.MonedasDeUsuario(id)
+// @Param		id-usuario	query		string	true	"Usuario que cotizara"
+// @Param		simbolo		query		string	true	"Simbolo de la moneda que cotizara"
+// @Param		precio		query		string	true	"Valor que cotizara"
+// @Param		fecha		query		string	true	"Fecha de la cotizacion"
+// @Success	200			{object}	string
+// @Failure	400			{object}	string
+// @Router		/cotizacion [post]
+func (mh MonedaHandler) AltaCotizacionManual(c *gin.Context) {
+	fecha, err := stringAFecha(c.Query("fecha"))
 	if err != nil {
-		c.JSON(http.StatusConflict, gin.H{"error": err})
+		c.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
 		return
 	}
 
-	c.JSON(http.StatusOK, monedas)
+	// idUsuario := c.Query("id-usuario")
+
+	precio, err := strconv.ParseFloat(c.Query("precio"), 64)
+	if err != nil {
+		c.JSON(http.StatusBadRequest, gin.H{"error": "el precio no es valido"})
+		return
+	}
+
+	simbolo := c.Query("simbolo")
+
+	if err := mh.srv.SimboloValido(simbolo); err != nil {
+		c.JSON(http.StatusBadRequest, gin.H{"error": fmt.Errorf("el simbolo no es valido: %w", err).Error()})
+		return
+	}
+
+	err = mh.srv.CotizarManualmente(simbolo, fecha, precio)
+	if err != nil {
+		c.JSON(http.StatusConflict, gin.H{"error": err.Error()})
+		return
+	}
+
+	c.JSON(http.StatusOK, "Se realizo con exito la cotizacion")
+}
+
+// @Summary	Usuario elimina cotizacion de moneda manualmente
+// @Tags		Cotizacion
+// @Accept		json
+// @Produce	json
+// @Param		id				path		string	true	"Usuario que elimina"
+// @Param		id-cotizacion	query		string	true	"cotizacion a eliminar"
+// @Success	200				{object}	string
+// @Failure	400				{object}	string
+// @Router		/cotizacion/{id} [delete]
+func (mh MonedaHandler) BajaCotizacion(c *gin.Context) {
+	id, err := strconv.Atoi(c.Query("id-cotizacion"))
+	if err != nil {
+		c.JSON(http.StatusBadRequest, gin.H{"error": "el id debe ser un entero"})
+		return
+	}
+	err = mh.srv.BajaCotizacionManual(id)
+	if err != nil {
+		c.JSON(http.StatusConflict, gin.H{"error": err.Error()})
+		return
+	}
+
+	c.JSON(http.StatusOK, "Se elimino con exito la cotizacion")
+}
+
+// @Summary	Usuario cambia cotizacion de moneda manualmente
+// @Tags		Cotizacion
+// @Accept		json
+// @Produce	json
+// @Param		id			path		string			true	"id de cotizacion"
+// @Param		id-usuario	query		string			true	"Usuario que hace los cambios"
+// @Param		cambios		body		[]ports.Patch	true	"Usuario que hace los cambios"
+// @Success	200			{object}	string
+// @Failure	400			{object}	string
+// @Router		/cotizacion/{id} [patch]
+func (mh MonedaHandler) ActualizarCotizacion(c *gin.Context) {
+
+	var cambios []ports.Patch
+	if err := c.BindJSON(&cambios); err != nil {
+		c.JSON(http.StatusBadRequest, gin.H{"error": fmt.Errorf("formato incorrecto: %w", err).Error()})
+		return
+	}
+
+	idCotizacion, err := strconv.Atoi(c.Param("id"))
+	if err != nil {
+		c.JSON(http.StatusBadRequest, gin.H{"error": "el id de la cotizacion debe ser un entero"})
+		return
+	}
+
+	idUsuario, err := strconv.Atoi(c.Query("id-usuario"))
+	if err != nil {
+		c.JSON(http.StatusBadRequest, gin.H{"error": "el id del usuario debe ser un entero"})
+		return
+	}
+
+	err = mh.srv.PatchCotizacion(idUsuario, idCotizacion, cambios)
+	if err != nil {
+		c.JSON(http.StatusConflict, gin.H{"error": err.Error()})
+		return
+	}
+
+	c.JSON(http.StatusOK, "Se actualizo con exito la cotizacion")
 }
